# minimap2-paf-io

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/data/: mod.rs
src/error/: mod.rs
src/input/: mod.rs
src/output/: mod.rs
src/tests/: mod.rs
