[package]
name = "minimap2-paf-io"
version = "0.0.0"
description = "Read and write data in minimap2's PAF format."
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
