[package]
name = "minimap2-paf-io"
version = "2.0.0"
description = "Read and write data in minimap2's PAF format."
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
documentation = "https://docs.rs/minimap2-paf-io"
repository = "https://github.com/sebschmi/minimap2-paf-io"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
